src/test/ui/async-await/await-keyword/incorrect-syntax-suggestions.stderr
error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:8:13
   |
LL |     let _ = await bar();
   |             ^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:12:13
   |
LL |     let _ = await? bar();
   |             ^^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await?`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:16:13
   |
LL |     let _ = await bar()?;
   |             ^^^^^^^^^^^^ help: `await` is a postfix operation: `bar()?.await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:21:13
   |
LL |     let _ = await { bar() };
   |             ^^^^^^^^^^^^^^^ help: `await` is a postfix operation: `{ bar() }.await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:25:13
   |
LL |     let _ = await(bar());
   |             ^^^^^^^^^^^^ help: `await` is a postfix operation: `(bar()).await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:29:13
   |
LL |     let _ = await { bar() }?;
   |             ^^^^^^^^^^^^^^^ help: `await` is a postfix operation: `{ bar() }.await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:33:14
   |
LL |     let _ = (await bar())?;
   |              ^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:37:24
   |
LL |     let _ = bar().await();
   |                        ^^ help: `await` is not a method call, remove the parentheses

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:41:24
   |
LL |     let _ = bar().await()?;
   |                        ^^ help: `await` is not a method call, remove the parentheses

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:53:13
   |
LL |     let _ = await bar();
   |             ^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:58:13
   |
LL |     let _ = await? bar();
   |             ^^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await?`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:63:13
   |
LL |     let _ = await bar()?;
   |             ^^^^^^^^^^^^ help: `await` is a postfix operation: `bar()?.await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:69:14
   |
LL |     let _ = (await bar())?;
   |              ^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:74:24
   |
LL |     let _ = bar().await();
   |                        ^^ help: `await` is not a method call, remove the parentheses

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:79:24
   |
LL |     let _ = bar().await()?;
   |                        ^^ help: `await` is not a method call, remove the parentheses

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:107:13
   |
LL |     let _ = await!(bar());
   |             ^^^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:111:13
   |
LL |     let _ = await!(bar())?;
   |             ^^^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:116:17
   |
LL |         let _ = await!(bar())?;
   |                 ^^^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:124:17
   |
LL |         let _ = await!(bar())?;
   |                 ^^^^^^^^^^^^^ help: `await` is a postfix operation: `bar().await`

error: expected expression, found `=>`
  --> $DIR/incorrect-syntax-suggestions.rs:132:25
   |
LL |     match await { await => () }
   |                   ----- ^^ expected expression
   |                   |
   |                   while parsing this incorrect await expression

error: incorrect use of `await`
  --> $DIR/incorrect-syntax-suggestions.rs:132:11
   |
LL |     match await { await => () }
   |           ^^^^^^^^^^^^^^^^^^^^^ help: `await` is a postfix operation: `{ await => () }.await`

error: expected one of `.`, `?`, `{`, or an operator, found `}`
  --> $DIR/incorrect-syntax-suggestions.rs:135:1
   |
LL |     match await { await => () }
   |     -----                      - expected one of `.`, `?`, `{`, or an operator
   |     |
   |     while parsing this match expression
...
LL | }
   | ^ unexpected token

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:53:13
   |
LL | fn foo9() -> Result<(), ()> {
   |    ---- this is not `async`
LL |     let _ = await bar();
   |             ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:58:13
   |
LL | fn foo10() -> Result<(), ()> {
   |    ----- this is not `async`
LL |     let _ = await? bar();
   |             ^^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:63:13
   |
LL | fn foo11() -> Result<(), ()> {
   |    ----- this is not `async`
LL |     let _ = await bar()?;
   |             ^^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:69:14
   |
LL | fn foo12() -> Result<(), ()> {
   |    ----- this is not `async`
LL |     let _ = (await bar())?;
   |              ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:74:13
   |
LL | fn foo13() -> Result<(), ()> {
   |    ----- this is not `async`
LL |     let _ = bar().await();
   |             ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:79:13
   |
LL | fn foo14() -> Result<(), ()> {
   |    ----- this is not `async`
LL |     let _ = bar().await()?;
   |             ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:84:13
   |
LL | fn foo15() -> Result<(), ()> {
   |    ----- this is not `async`
LL |     let _ = bar().await;
   |             ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:88:13
   |
LL | fn foo16() -> Result<(), ()> {
   |    ----- this is not `async`
LL |     let _ = bar().await?;
   |             ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:93:17
   |
LL |     fn foo() -> Result<(), ()> {
   |        --- this is not `async`
LL |         let _ = bar().await?;
   |                 ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:100:17
   |
LL |     let foo = || {
   |               -- this is not `async`
LL |         let _ = bar().await?;
   |                 ^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:116:17
   |
LL |     fn foo() -> Result<(), ()> {
   |        --- this is not `async`
LL |         let _ = await!(bar())?;
   |                 ^^^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/incorrect-syntax-suggestions.rs:124:17
   |
LL |     let foo = || {
   |               -- this is not `async`
LL |         let _ = await!(bar())?;
   |                 ^^^^^^^^^^^^^ only allowed inside `async` functions and blocks

error[E0277]: the `?` operator can only be applied to values that implement `std::ops::Try`
  --> $DIR/incorrect-syntax-suggestions.rs:16:19
   |
LL |     let _ = await bar()?;
   |                   ^^^^^^
   |                   |
   |                   the `?` operator cannot be applied to type `impl std::future::Future`
   |                   help: consider using `.await` here: `bar().await?`
   |
   = help: the trait `std::ops::Try` is not implemented for `impl std::future::Future`
   = note: required by `std::ops::Try::into_result`

error[E0277]: the `?` operator can only be applied to values that implement `std::ops::Try`
  --> $DIR/incorrect-syntax-suggestions.rs:63:19
   |
LL |     let _ = await bar()?;
   |                   ^^^^^^ the `?` operator cannot be applied to type `impl std::future::Future`
   |
   = help: the trait `std::ops::Try` is not implemented for `impl std::future::Future`
   = note: required by `std::ops::Try::into_result`

error: aborting due to 36 previous errors

Some errors have detailed explanations: E0277, E0728.
For more information about an error, try `rustc --explain E0277`.
